--- a/IncomeExpenseControl.Data/IncomeExpenseControl.Data.csproj
+++ b/IncomeExpenseControl.Data/IncomeExpenseControl.Data.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entity\Coder.cs" />
+    <Compile Include="Entity\TotalRevenue.cs" />
     <Compile Include="Model\Base.cs" />
     <Compile Include="Entity\CateringCompany.cs" />
     <Compile Include="Entity\CateringIncomeStatus.cs" />
