--- a/IncomeExpenseControl.Services/IncomeExpenseControl.Services.csproj
+++ b/IncomeExpenseControl.Services/IncomeExpenseControl.Services.csproj
@@ -46,10 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\ICateringCompanies_Service.cs" />
     <Compile Include="Interfaces\IDailyCastingEntry_Catering_Service.cs" />
     <Compile Include="Interfaces\IDailyCastingEntry_Personal_Service.cs" />
     <Compile Include="Interfaces\IDailyCastingEntry_TotalRevenue_Service.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CateringCompanies_Service.cs" />
+    <Compile Include="Services\DailyCastingEntry_Catering_Service.cs" />
     <Compile Include="Services\DailyCastingEntry_Personal_Service.cs" />
     <Compile Include="Services\DailyCastingEntry_TotalRevenue_Service.cs" />
   </ItemGroup>
