--- a/IncomeExpenseControl.Services/IncomeExpenseControl.Services.csproj
+++ b/IncomeExpenseControl.Services/IncomeExpenseControl.Services.csproj
@@ -49,11 +49,13 @@
     <Compile Include="Interfaces\ICateringCompanies_Service.cs" />
     <Compile Include="Interfaces\IDailyCastingEntry_Catering_Service.cs" />
     <Compile Include="Interfaces\IDailyCastingEntry_Personal_Service.cs" />
+    <Compile Include="Interfaces\IDailyCastingEntry_Restaurant_Cash_Service.cs" />
     <Compile Include="Interfaces\IDailyCastingEntry_TotalRevenue_Service.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CateringCompanies_Service.cs" />
     <Compile Include="Services\DailyCastingEntry_Catering_Service.cs" />
     <Compile Include="Services\DailyCastingEntry_Personal_Service.cs" />
+    <Compile Include="Services\DailyCastingEntry_Restaurant_Cash_Service.cs" />
     <Compile Include="Services\DailyCastingEntry_TotalRevenue_Service.cs" />
   </ItemGroup>
   <ItemGroup>
