--- a/IncomeExpenseControl.WinForm/IncomeExpenseControl.WinForm.csproj
+++ b/IncomeExpenseControl.WinForm/IncomeExpenseControl.WinForm.csproj
@@ -56,6 +56,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CateringCompanies_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CateringCompanies_Form.Designer.cs">
+      <DependentUpon>CateringCompanies_Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="DailyCastingEntry_Catering_Form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,6 +73,12 @@
     </Compile>
     <Compile Include="DailyCastingEntry_Personal_Form.Designer.cs">
       <DependentUpon>DailyCastingEntry_Personal_Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DailyCastingEntry_Restaurant_Cash_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DailyCastingEntry_Restaurant_Cash_Form.Designer.cs">
+      <DependentUpon>DailyCastingEntry_Restaurant_Cash_Form.cs</DependentUpon>
     </Compile>
     <Compile Include="HomePage.cs">
       <SubType>Form</SubType>
@@ -81,11 +93,17 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="CateringCompanies_Form.resx">
+      <DependentUpon>CateringCompanies_Form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DailyCastingEntry_Catering_Form.resx">
       <DependentUpon>DailyCastingEntry_Catering_Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DailyCastingEntry_Personal_Form.resx">
       <DependentUpon>DailyCastingEntry_Personal_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DailyCastingEntry_Restaurant_Cash_Form.resx">
+      <DependentUpon>DailyCastingEntry_Restaurant_Cash_Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HomePage.resx">
       <DependentUpon>HomePage.cs</DependentUpon>
