--- a/IncomeExpenseControl.Services/IncomeExpenseControl.Services.csproj
+++ b/IncomeExpenseControl.Services/IncomeExpenseControl.Services.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Interfaces\IDailyCastingEntry_Restaurant_Food_Service.cs" />
     <Compile Include="Interfaces\IDailyCastingEntry_TotalRevenue_Service.cs" />
     <Compile Include="Interfaces\IFoodCards_Service.cs" />
+    <Compile Include="Interfaces\ISupplierCompanies_Service.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Banks_Service.cs" />
     <Compile Include="Services\CateringCompanies_Service.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="Services\DailyCastingEntry_Restaurant_Food_Service.cs" />
     <Compile Include="Services\DailyCastingEntry_TotalRevenue_Service.cs" />
     <Compile Include="Services\FoodCards_Service.cs" />
+    <Compile Include="Services\SupplierCompanies_Service.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
