--- a/IncomeExpenseControl.WinForm/IncomeExpenseControl.WinForm.csproj
+++ b/IncomeExpenseControl.WinForm/IncomeExpenseControl.WinForm.csproj
@@ -98,6 +98,24 @@
     <Compile Include="DailyCastingEntry_Restaurant_Food_Form.Designer.cs">
       <DependentUpon>DailyCastingEntry_Restaurant_Food_Form.cs</DependentUpon>
     </Compile>
+    <Compile Include="Expense_Invoice_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Expense_Invoice_Form.Designer.cs">
+      <DependentUpon>Expense_Invoice_Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Expense_Suppliers_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Expense_Suppliers_Form.Designer.cs">
+      <DependentUpon>Expense_Suppliers_Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Expense_Vehicle_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Expense_Vehicle_Form.Designer.cs">
+      <DependentUpon>Expense_Vehicle_Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="FoodCards_Form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -143,6 +161,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DailyCastingEntry_Restaurant_Food_Form.resx">
       <DependentUpon>DailyCastingEntry_Restaurant_Food_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Expense_Invoice_Form.resx">
+      <DependentUpon>Expense_Invoice_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Expense_Suppliers_Form.resx">
+      <DependentUpon>Expense_Suppliers_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Expense_Vehicle_Form.resx">
+      <DependentUpon>Expense_Vehicle_Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FoodCards_Form.resx">
       <DependentUpon>FoodCards_Form.cs</DependentUpon>
