--- a/IncomeExpenseControl.Services/IncomeExpenseControl.Services.csproj
+++ b/IncomeExpenseControl.Services/IncomeExpenseControl.Services.csproj
@@ -54,8 +54,12 @@
     <Compile Include="Interfaces\IDailyCastingEntry_Restaurant_Cash_Service.cs" />
     <Compile Include="Interfaces\IDailyCastingEntry_Restaurant_Food_Service.cs" />
     <Compile Include="Interfaces\IDailyCastingEntry_TotalRevenue_Service.cs" />
+    <Compile Include="Interfaces\IExpense_Invoice_Service.cs" />
+    <Compile Include="Interfaces\IExpense_Suppliers_Service.cs" />
+    <Compile Include="Interfaces\IExpense_Vehicle_Service.cs" />
     <Compile Include="Interfaces\IFoodCards_Service.cs" />
     <Compile Include="Interfaces\ISupplierCompanies_Service.cs" />
+    <Compile Include="Interfaces\ITotalExpenses_Service.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Banks_Service.cs" />
     <Compile Include="Services\CateringCompanies_Service.cs" />
@@ -65,8 +69,12 @@
     <Compile Include="Services\DailyCastingEntry_Restaurant_Cash_Service.cs" />
     <Compile Include="Services\DailyCastingEntry_Restaurant_Food_Service.cs" />
     <Compile Include="Services\DailyCastingEntry_TotalRevenue_Service.cs" />
+    <Compile Include="Services\Expense_Invoice_Service.cs" />
+    <Compile Include="Services\Expense_Suppliers_Service.cs" />
+    <Compile Include="Services\Expense_Vehicle_Service.cs" />
     <Compile Include="Services\FoodCards_Service.cs" />
     <Compile Include="Services\SupplierCompanies_Service.cs" />
+    <Compile Include="Services\TotalExpenses_Service.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
