--- a/IncomeExpenseControl.WinForm/IncomeExpenseControl.WinForm.csproj
+++ b/IncomeExpenseControl.WinForm/IncomeExpenseControl.WinForm.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -128,12 +129,24 @@
     <Compile Include="HomePage.Designer.cs">
       <DependentUpon>HomePage.cs</DependentUpon>
     </Compile>
+    <Compile Include="ReportTotalRevenues_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportTotalRevenues_Form.Designer.cs">
+      <DependentUpon>ReportTotalRevenues_Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="ReportCateringRevenues_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportCateringRevenues_Form.Designer.cs">
+      <DependentUpon>ReportCateringRevenues_Form.cs</DependentUpon>
     </Compile>
     <Compile Include="SupplierCompanies_Form.cs">
       <SubType>Form</SubType>
@@ -176,6 +189,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="HomePage.resx">
       <DependentUpon>HomePage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReportCateringRevenues_Form.resx">
+      <DependentUpon>ReportCateringRevenues_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReportTotalRevenues_Form.resx">
+      <DependentUpon>ReportTotalRevenues_Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
