--- a/IncomeExpenseControl.WinForm/IncomeExpenseControl.WinForm.csproj
+++ b/IncomeExpenseControl.WinForm/IncomeExpenseControl.WinForm.csproj
@@ -135,6 +135,12 @@
     <Compile Include="ReportPersonal_Form.Designer.cs">
       <DependentUpon>ReportPersonal_Form.cs</DependentUpon>
     </Compile>
+    <Compile Include="ReportRestaurant_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportRestaurant_Form.Designer.cs">
+      <DependentUpon>ReportRestaurant_Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="ReportTotalRevenues_Form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -201,6 +207,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ReportPersonal_Form.resx">
       <DependentUpon>ReportPersonal_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReportRestaurant_Form.resx">
+      <DependentUpon>ReportRestaurant_Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ReportTotalRevenues_Form.resx">
       <DependentUpon>ReportTotalRevenues_Form.cs</DependentUpon>
