--- a/IncomeExpenseControl.WinForm/IncomeExpenseControl.WinForm.csproj
+++ b/IncomeExpenseControl.WinForm/IncomeExpenseControl.WinForm.csproj
@@ -84,6 +84,12 @@
     <Compile Include="DailyCastingEntry_Catering_Form.Designer.cs">
       <DependentUpon>DailyCastingEntry_Catering_Form.cs</DependentUpon>
     </Compile>
+    <Compile Include="DailyCastingEntry_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DailyCastingEntry_Form.Designer.cs">
+      <DependentUpon>DailyCastingEntry_Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="DailyCastingEntry_Personal_Form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -195,6 +201,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DailyCastingEntry_Catering_Form.resx">
       <DependentUpon>DailyCastingEntry_Catering_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DailyCastingEntry_Form.resx">
+      <DependentUpon>DailyCastingEntry_Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DailyCastingEntry_Personal_Form.resx">
       <DependentUpon>DailyCastingEntry_Personal_Form.cs</DependentUpon>
