--- a/IncomeExpenseControl.WinForm/IncomeExpenseControl.WinForm.csproj
+++ b/IncomeExpenseControl.WinForm/IncomeExpenseControl.WinForm.csproj
@@ -78,65 +78,17 @@
     <Compile Include="CateringCompanies_Form.Designer.cs">
       <DependentUpon>CateringCompanies_Form.cs</DependentUpon>
     </Compile>
-    <Compile Include="DailyCastingEntry_Catering_Form.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="DailyCastingEntry_Catering_Form.Designer.cs">
-      <DependentUpon>DailyCastingEntry_Catering_Form.cs</DependentUpon>
-    </Compile>
     <Compile Include="DailyCastingEntry_Form.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="DailyCastingEntry_Form.Designer.cs">
       <DependentUpon>DailyCastingEntry_Form.cs</DependentUpon>
     </Compile>
-    <Compile Include="DailyCastingEntry_Personal_Form.cs">
+    <Compile Include="Expense_Form.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DailyCastingEntry_Personal_Form.Designer.cs">
-      <DependentUpon>DailyCastingEntry_Personal_Form.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DailyCastingEntry_Restaurant_Bank_Form.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="DailyCastingEntry_Restaurant_Bank_Form.Designer.cs">
-      <DependentUpon>DailyCastingEntry_Restaurant_Bank_Form.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DailyCastingEntry_Restaurant_Cash_Form.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="DailyCastingEntry_Restaurant_Cash_Form.Designer.cs">
-      <DependentUpon>DailyCastingEntry_Restaurant_Cash_Form.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DailyCastingEntry_Restaurant_Food_Form.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="DailyCastingEntry_Restaurant_Food_Form.Designer.cs">
-      <DependentUpon>DailyCastingEntry_Restaurant_Food_Form.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Expense_Invoice_Form.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Expense_Invoice_Form.Designer.cs">
-      <DependentUpon>Expense_Invoice_Form.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Expense_Staffs_Form.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Expense_Staffs_Form.Designer.cs">
-      <DependentUpon>Expense_Staffs_Form.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Expense_Suppliers_Form.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Expense_Suppliers_Form.Designer.cs">
-      <DependentUpon>Expense_Suppliers_Form.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Expense_Vehicle_Form.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Expense_Vehicle_Form.Designer.cs">
-      <DependentUpon>Expense_Vehicle_Form.cs</DependentUpon>
+    <Compile Include="Expense_Form.Designer.cs">
+      <DependentUpon>Expense_Form.cs</DependentUpon>
     </Compile>
     <Compile Include="FoodCards_Form.cs">
       <SubType>Form</SubType>
@@ -199,35 +151,11 @@
     <EmbeddedResource Include="CateringCompanies_Form.resx">
       <DependentUpon>CateringCompanies_Form.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DailyCastingEntry_Catering_Form.resx">
-      <DependentUpon>DailyCastingEntry_Catering_Form.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="DailyCastingEntry_Form.resx">
       <DependentUpon>DailyCastingEntry_Form.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DailyCastingEntry_Personal_Form.resx">
-      <DependentUpon>DailyCastingEntry_Personal_Form.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DailyCastingEntry_Restaurant_Bank_Form.resx">
-      <DependentUpon>DailyCastingEntry_Restaurant_Bank_Form.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DailyCastingEntry_Restaurant_Cash_Form.resx">
-      <DependentUpon>DailyCastingEntry_Restaurant_Cash_Form.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DailyCastingEntry_Restaurant_Food_Form.resx">
-      <DependentUpon>DailyCastingEntry_Restaurant_Food_Form.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Expense_Invoice_Form.resx">
-      <DependentUpon>Expense_Invoice_Form.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Expense_Staffs_Form.resx">
-      <DependentUpon>Expense_Staffs_Form.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Expense_Suppliers_Form.resx">
-      <DependentUpon>Expense_Suppliers_Form.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Expense_Vehicle_Form.resx">
-      <DependentUpon>Expense_Vehicle_Form.cs</DependentUpon>
+    <EmbeddedResource Include="Expense_Form.resx">
+      <DependentUpon>Expense_Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FoodCards_Form.resx">
       <DependentUpon>FoodCards_Form.cs</DependentUpon>
